2010-04-23  Jan Nijtmans <nijtmans@users.sf.net>

	* configure: Regenerated to use latest TEA tcl.m4.

2010-02-19  Stuart Cassoff  <stwo@users.sourceforge.net>

	* tcl.m4: Correct compiler/linker flags
	for threaded builds on OpenBSD.
	* configure: Regenerated to use latest TEA tcl.m4.

2010-01-19  Jan Nijtmans <nijtmans@users.sf.net>

	* configure: Regenerated to use latest TEA tcl.m4.

2009-04-27  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl.m4 (TEA_CONFIG_CFLAGS): harden the check to add _r to CC on
	AIX with threads.

2009-03-26  Jan Nijtmans <nijtmans@users.sf.net>

	* configure: Regenerated to use latest TEA tcl.m4.

2009-03-20  Andreas Kupries <andreask@activestate.com>

	* configure: Regenerated to get my latest updates to tcl.m4 (See
	tclconfig/ChangeLog).

	NOTE: This pulled in an unexpected set of changes regarding
	SHLIB_VERSION and SHARED_LIB_SUFFIX, indicating that configure was
	not regenerated since some older change to tcl.m4.

2009-03-18  Stuart Cassoff  <stwo@users.sourceforge.net>

	* Makefile.in: Removed offending 'rm -f' line [Bug 2429444].

2009-03-11  Joe English  <jenglish@users.sourceforge.net>

	* pkgIndex.tcl.in: use @PACKAGE_NAME@ instead of "Tclsha1"
	[Bug 1960628].

2008-12-20  Daniel Steffen  <das@users.sourceforge.net>

	* Makefile.in: use INSTALL_LIBRARY instead of INSTALL_PROGRAM to
	install libraries, avoids breakage from tcl's install-strip when
	built as a bundled package.

2008-06-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc: Updated win build files. Added new option to
	* win/rules.vc:    nmakehlp to qualify a path name for use in setting
	* win/nmakehlp.c:  up paths for test.

2007-10-23  Jeff Hobbs  <jeffh@ActiveState.com>

	*** Tagged tea-3-branch to start TEA 4 development on HEAD ***

	* Makefile.in: separate PKG_ENV parts from TCLSH/WISH_ENV parts to
	better allow 8.4 and 8.5 core variant testing.

2007-05-11  Pat Thoyts  <patthoyts@users.sourceforge.net>
