@@ -9,14 +9,14 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: tclsample.test,v 1.2 2004/12/02 00:35:38 dkf Exp $
+# RCS: @(#) $Id: tclsample.test,v 1.3 2010/04/23 11:51:53 nijtmans Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
     namespace import ::tcltest::*
 }
 
-package require Tclsha1
+package require sample
 
 test sha-1.1 {incorrect command usage} {
     list [catch {sha1} errMsg] $errMsg
